save current state

--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bestell App</title>
+    <link rel="icon" type="image/x-icon" href="img/Favicon/favicon-32x32.png" />
+    <link rel="stylesheet" href="style.css">
+    <!-- <script src="script.js"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
-    
+
+    <header>
+        <div class="header_content">
+            <img class="logo" src="img/Logo/Bestell App- Logo.svg" alt="BestellApp_Logo">
+        </div>
+    </header>
+
+    <div class="mainImage">
+    </div>
+
+    <div class="restaurantName">
+        <h1 class="Restaurant_Title">Steaks & More</h1>
+        <div class="stars">
+            <p class="rating">Bewertung 4,4/5</p>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+        </div>
+    </div>
+
+    div.
+
 </body>
+
 </html>
