--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bestell App</title>
     <link rel="icon" type="image/x-icon" href="img/Favicon/favicon-32x32.png" />
-    <link rel="stylesheet" href="style.css">
-    <!-- <script src="script.js"></script> -->
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/standards.css">
+
+    <script src="script/script.js"></script>
+    <script src="script/database.js"></script>
+    <script src="script/templates.js"></script>
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -28,10 +34,11 @@
     </div>
 
     <section class="restaurant_information">
-        <div class="restaurantName">
+        <div class="restaurant_header">
             <h1 class="Restaurant_Title">Steaks & More</h1>
-            <button onclick="" type="button" class="main_btn"><i class="fa fa-info-circle" style="font-size:12px"></i>
-                about us</button>
+            <button onclick="toggleAbout()" type="button" class="main_btn">
+                <i class="fa fa-info-circle" style="font-size:12px"></i> about us
+            </button>
         </div>
 
         <div class="stars">
@@ -42,8 +49,31 @@
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star"></span>
         </div>
-    </section>
 
+        <div id="aboutUsBox" onclick="toggleAbout()" class="about_overlay">
+            <div class="about_content" onclick="event.stopPropagation()">
+                <button class="close_btn" onclick="toggleAbout()">✖</button>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d547.6702895373519!2d12.643594379505375!3d47.77153830634879!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sde!2sde!4v1750761506775!5m2!1sde!2sde"
+                    width="500" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+                <p>
+                    Willkommen bei „Steaks & More“ - deinem Steakhouse mit Leidenschaft!
+                    Frische Zutaten, top Qualität und das seit über 15 Jahren.
+                </p>
+
+                <h3>Öffnungszeiten</h3>
+                <ul style="list-style: none; padding: 0;">
+                    <li><strong>Montag:</strong> Ruhetag</li>
+                    <li><strong>Dienstag - Donnerstag:</strong> 17:00 - 22:00 Uhr</li>
+                    <li><strong>Freitag:</strong> 17:00 - 23:00 Uhr</li>
+                    <li><strong>Samstag:</strong> 12:00 - 23:00 Uhr</li>
+                    <li><strong>Sonntag:</strong> 12:00 - 21:00 Uhr</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 
     <div class="select_category">
         <button class="main_btn_category">Hauptgerichte</button>
