--- a/index.html
+++ b/index.html
@@ -76,65 +76,11 @@
     </section>
 
     <div class="select_category">
-        <button class="main_btn_category">Hauptgerichte</button>
-        <button class="main_btn_category">Beilagen</button>
+        <button class="main_btn_category" onclick="chooseMainDishes()">Hauptgerichte</button>
+        <button class="main_btn_category" onclick="chooseSideDishes()">Beilagen</button>
     </div>
 
-    <section class="main_menu">
-        <div class="select_menu">
-            <h2>Rumpsteak "MADAGASKAR"</h2>
-            <div class="order">
-                <span>29,90€</span>
-                <button class="order_btn">+</button>
-            </div>
-            <span>In grüner Pfeffersauce, dazu Pommes frites</span>
-        </div>
-
-        <div class="select_menu">
-            <h2>Zwiebel-Rumpsteak</h2>
-            <div class="order">
-                <span>28,90€</span>
-                <button class="order_btn">+</button>
-            </div>
-            <span>mit Folienkartoffel und Sour-Cream</span>
-        </div>
-
-        <div class="select_menu">
-            <h2>Pfeffer-Rumpsteak</h2>
-            <div class="order">
-                <span>28,90€</span>
-                <button class="order_btn">+</button>
-            </div>
-            <span>mit Pommes frites</span>
-        </div>
-
-        <div class="select_menu">
-            <h2>Pfeffer-Filetsteak</h2>
-            <div class="order">
-                <span>33,90€</span>
-                <button class="order_btn">+</button>
-            </div>
-            <span>mit Pommes frites</span>
-        </div>
-
-        <div class="select_menu">
-            <h2>Lady Steak</h2>
-            <div class="order">
-                <span>34,90€</span>
-                <button class="order_btn">+</button>
-            </div>
-            <span>Filetsteak mit Röstzwiebeln, gedünsteten Champignons und Folienkartoffel</span>
-        </div>
-
-        <div class="select_menu">
-            <h2>Filetsteak "Amerika"</h2>
-            <div class="order">
-                <span>34,90€</span>
-                <button class="order_btn">+</button>
-            </div>
-            <span>mit Spiegelei, gedünsteten Champignons, Röstzwiebeln und Folienkartoffel</span>
-        </div>
-    </section>
+    <section id="main_menu"></section>
 
 </body>
 
